# discordMovieBot

./: .gitignore  README.md  botMsgTest.py  discord2sheet.py  pyproject.toml  sheetWriteTest.py
